[tool.poetry]
name = "rag-1"
version = "0.1.0"
description = "Building basic RAG with Groq"
authors = ["Snehanco"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.1"
langchain = "^0.3.25"
langchain-groq = "^0.3.2"
langchain-openai = "^0.3.23"
langchain-community = "^0.3.25"
langchain-ollama = "^0.3.3"
pypdf = "^5.6.0"
faiss-cpu = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
